Excluding tensorflow example notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-DT Multi Hidden Layer Regression on Boston Data Batched Parameterized 
-DropOut.ipynb
+DT Multi Hidden Layer Regression on Boston Data Batched Parameterized DropOut.ipynb
